@@ -9,5 +9,8 @@ if (!defined('_PS_VERSION_')) {
  */
 function upgrade_module_2_1_12()
 {
-    return Configuration::updateValue('PACKETERY_ADDRESS_VALIDATION', 'none');
+    return (
+        Configuration::updateValue('PACKETERY_ADDRESS_VALIDATION', 'none') &&
+        Configuration::updateValue('PACKETERY_ORDERS_PER_PAGE', 50)
+    );
 }
