@@ -78,3 +78,4 @@
        - Fixed: fresh checkout no longer throws error in development mode
 2.1.12 - Added: support for Packeta address validation widget in the cart
        - Added: Address validation setting with 'none', 'optional' and 'required' options
+       - Fixed: weight loading and setting in case Packeta orders are paged
